[signal] Sending image capability
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>